fix collapsing bug

--- a/styles.css
+++ b/styles.css
@@ -272,3 +272,9 @@ p {
   padding: 1px;
   display: inline;
 }
+
+.footer {
+  width: 100%;
+  height: 320px;
+  background-color: #280033;
+}
